app/.externalNativeBuild/cmake/debug/x86_64/android_gradle_build_Preprocess_x86_64.stdout.txt
[1/2] Building CXX object CMakeFiles/Preprocess.dir/C_preprocess.cpp.o
/home/quyenpham/ImageProcessing/app/src/main/cpp/C_preprocess.cpp:183:24: warning: format specifies type 'double' but the argument has type 'int' [-Wformat]
        printf("%f\n", kerSize);
                ~~     ^~~~~~~
                %d
/home/quyenpham/ImageProcessing/app/src/main/cpp/C_preprocess.cpp:186:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
/home/quyenpham/ImageProcessing/app/src/main/cpp/C_preprocess.cpp:222:13: warning: add explicit braces to avoid dangling else [-Wdangling-else]
            else if (this->perpendicular2[0] == -1) {
            ^
/home/quyenpham/ImageProcessing/app/src/main/cpp/C_preprocess.cpp:271:41: warning: format specifies type 'int' but the argument has type 'std::__ndk1::vector<cv::Vec<float, 2>, std::__ndk1::allocator<cv::Vec<float, 2> > >::size_type' (aka 'unsigned long') [-Wformat]
    printf("So line tim duoc la: %d\n", lines.size());
                                 ~~     ^~~~~~~~~~~~
                                 %lu
/home/quyenpham/ImageProcessing/app/src/main/cpp/C_preprocess.cpp:479:17: warning: equality comparison result unused [-Wunused-comparison]
        kerSize == kerSize - 1;
        ~~~~~~~~^~~~~~~~~~~~~~
/home/quyenpham/ImageProcessing/app/src/main/cpp/C_preprocess.cpp:479:17: note: use '=' to turn this equality comparison into an assignment
        kerSize == kerSize - 1;
                ^~
                =
5 warnings generated.
[2/2] Linking CXX shared library /home/quyenpham/ImageProcessing/app/build/intermediates/cmake/debug/obj/x86_64/libPreprocess.so
FAILED: /home/quyenpham/ImageProcessing/app/build/intermediates/cmake/debug/obj/x86_64/libPreprocess.so 
: && /home/quyenpham/Android/Sdk/ndk-bundle/toolchains/llvm/prebuilt/linux-x86_64/bin/clang++ --target=x86_64-none-linux-android21 --gcc-toolchain=/home/quyenpham/Android/Sdk/ndk-bundle/toolchains/llvm/prebuilt/linux-x86_64 --sysroot=/home/quyenpham/Android/Sdk/ndk-bundle/toolchains/llvm/prebuilt/linux-x86_64/sysroot -fPIC -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -fno-addrsig -Wa,--noexecstack -Wformat -Werror=format-security -stdlib=libc++ -std=c++14 -fexceptions -frtti -O0 -fno-limit-debug-info  -Wl,--exclude-libs,libgcc.a -Wl,--exclude-libs,libatomic.a -Wl,--build-id -Wl,--warn-shared-textrel -Wl,--fatal-warnings -Wl,--no-undefined -Qunused-arguments -Wl,-z,noexecstack -Wl,-z,relro -Wl,-z,now -shared -Wl,-soname,libPreprocess.so -o /home/quyenpham/ImageProcessing/app/build/intermediates/cmake/debug/obj/x86_64/libPreprocess.so CMakeFiles/Preprocess.dir/C_preprocess.cpp.o  /home/quyenpham/ImageProcessing/app/src/main/cpp/../jniLibs/x86_64/libopencv_java4.so -landroid -llog -latomic -lm && :
/home/quyenpham/ImageProcessing/app/src/main/cpp/C_preprocess.cpp:469: error: undefined reference to 'lbplibrary::BGLBP::BGLBP()'
clang++: error: linker command failed with exit code 1 (use -v to see invocation)
ninja: build stopped: subcommand failed.
